Добавил верификацию yandex и google

--- a/app/main.html
+++ b/app/main.html
@@ -8,7 +8,8 @@
     <meta name="description" content='{Seo.description}'/>
     <meta name="keywords" content='{Seo.keywords}'/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="yandex-verification" content="dcd40d6b5674a34e" />
+    <meta name="yandex-verification" content="ff0de3a6902f3fb3" />
+    <meta name="google-site-verification" content="ZJdYpe11oBnGDd-dOOs1CWOmd82HrG2UfqLYdlXj4lU" />
 
     <link rel="icon" href="/favicon.ico?4">
 
